# vapoursynth

./: .appveyor.yml  .codespellignore  .dockerignore  .gitignore  .gitmodules  .svnignore  .travis.yml  1test4.py  APIV4 changes.txt  COPYING.LGPLv2.1  ChangeLog  ChangeLog.md  Dockerfile  INSTALL  MANIFEST.in  Makefile.am  README.md  VAPOURSYNTH_VERSION  VAPOURSYNTH_VERSION_EXTRA  bootstrap.py  bootstrap.sh  build instructions windows.md  build instructions windows.txt  c++_build.bat  changes.txt  compile_all.bat  configure.ac  cython_build.bat  docs_build.bat  git_pull.bat  how_to_compile.txt  install_deps.bat  install_python_requirements.bat  meson.build  meson.options  meson_options.txt  ofl.txt  pyproject.toml  python-requirements.txt  python_update.bat  (+6 more)
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-request.md  question.md
.github/workflows/: build.yml  c-cpp.yml  codespell.yml  docker.yml  linux.yml  macos.yml  main.yml  windows.yml
data/: vapoursynth.xml
doc/: Makefile  about.rst  addborders.rst  apireference.rst  applications.rst  assumefps.rst  autoloading.rst  avfs.rst  avisynthcomp.rst  avsloadplugin.rst  blankclip.rst  cache.rst  conf.py  crop.rst  doubleweave.rst  flip.rst  functions.rst  gettingstarted.rst  includedplugins.rst  index.rst  installation.rst  interleave.rst  introduction.rst  linuxcompilation.rst  loadplugin.rst  loop.rst  lut.rst  lut2.rst  make.bat  modifyprops.rst  osxcompilation.rst  output.rst  packaging.rst  pluginlist.rst  plugins.rst  pythonbindings.rst  pythonreference.rst  resize.rst  reverse.rst  selectclip.rst  (+10 more)
doc/api/: vapoursynth.h.rst  vapoursynth4.h.rst  vshelper.h.rst  vshelper4.h.rst  vsscript.h.rst  vsscript4.h.rst
doc/es/: about.po
doc/functions/: addborders.rst  assumefps.rst  audiogain.rst  audiomix.rst  averageframes.rst  binarize.rst  blankaudio.rst  blankclip.rst  boxblur.rst  cache.rst  clipinfo.rst  cliptoprop.rst  convolution.rst  copyframeproperties.rst  coreinfo.rst  crop.rst  deflate_inflate.rst  deleteframes.rst  doubleweave.rst  duplicateframes.rst  expr.rst  flip.rst  frameeval.rst  framenum.rst  frameprops.rst  freezeframes.rst  hysteresis.rst  interleave.rst  invert.rst  levels.rst  limiter.rst  loadallplugins.rst  loadplugin.rst  loadpluginavs.rst  loop.rst  lut.rst  lut2.rst  makediff.rst  maskedmerge.rst  median.rst  (+32 more)
doc/plugins/: assvapour.rst  avisource.rst  eedi3.rst  imwri.rst  misc.rst  morpho.rst  ocr.rst  rgvs.rst  subtext.rst  vinverse.rst  vivtc.rst
include/: VSConstants4.h  VSHelper.h  VSHelper4.h  VSScript.h  VSScript4.h  VapourSynth.h  VapourSynth4.h  vshelper.h
include/asm/: x86inc.asm
include/cython/: vapoursynth.h  vapoursynth_api.h
installer/: CodeDependencies.iss  MANIFEST.in  build instructions.txt  install-portable-vapoursynth.ps1  make installers.bat  make portable.bat  make_installers.bat  make_portable.bat  pip.bat  setmvscvars.bat  setup.py  template.vpy  vapoursynth.pth  vs-detect-python.bat  vsinstaller.iss  vspipe.bat  vsrepo.bat
installer/scripts/: code.pas  products.iss
instructions/: build_instructions_windows.md
msvc_project/: VapourSynth.sln  VapourSynth.vcxproj  vsyasm.props
msvc_project/AVFS/: AVFS.vcxproj  AVFS.vcxproj.filters
msvc_project/AvsCompat/: AvsCompat.vcxproj  AvsCompat.vcxproj.filters
msvc_project/Core/: Core.vcxproj  Core.vcxproj.filters
msvc_project/CoreFilters/: CoreFilters.vcxproj  CoreFilters.vcxproj.filters
msvc_project/EEDI3/: EEDI3.vcxproj  EEDI3.vcxproj.filters
msvc_project/ExprDebugger/: ExprDebugger.vcxproj  ExprDebugger.vcxproj.filters
msvc_project/MiscFilters/: MiscFilters.vcxproj  MiscFilters.vcxproj.filters
msvc_project/Morpho/: Morpho.vcxproj  Morpho.vcxproj.filters
msvc_project/RemoveGrainVS/: RemoveGrainVS.vcxproj  RemoveGrainVS.vcxproj.filters
msvc_project/VIVTC/: VIVTC.vcxproj  VIVTC.vcxproj.filters
msvc_project/VSFS/: VSFS.vcxproj  VSFS.vcxproj.filters
msvc_project/VSPipe/: VSPipe.vcxproj  VSPipe.vcxproj.filters
msvc_project/VSScript/: VSScript.vcxproj  VSScript.vcxproj.filters
msvc_project/VSScriptPython38/: VSScriptPython38.vcxproj  VSScriptPython38.vcxproj.filters
msvc_project/VSVFW/: VSVFW.vcxproj  VSVFW.vcxproj.filters
msvc_project/Vinverse/: Vinverse.vcxproj  Vinverse.vcxproj.filters
pc/: autotools-vapoursynth-script.pc.in  autotools-vapoursynth.pc.in  vapoursynth-script.pc.in  vapoursynth.pc.in
recipe/: bld.bat  build.sh  conda_build_config.yaml  crash-plugin.c  meta.yaml  test_autoload.bat  test_autoload.sh
recipe/patches/: autoload-system-path-relocatable.patch  do-not-install-vapoursynth-dll.patch  link-to-zimg-library.patch  script-fix-python-path.patch
sdk/: filter_skeleton.c  invert_example.c  vsscript_example.c  vsscript_example.cpp
src/avfs/: assertive.cpp  avfs.cpp  avfs.h  avfs.rc  avfsavi2.cpp  avfsincludes.h  avfspfm.cpp  avfspfm.h  avfswav.cpp  avisynth.h  files.cpp  files.h  ss.cpp  ss.h  videoinfoadapter.h  vsfs.cpp  vsfs.h  xxfs.h
src/avisynth/: avisynth.h  avisynth_compat.cpp  avisynth_compat.h  avisynth_wrapper.h  interface.cpp
src/common/: fourcc.cpp  fourcc.h  p2p.h  p2p_api.cpp  p2p_api.h  v210.cpp  vsutf16.h  wave.cpp  wave.h
src/core/: VapourSynth3.h  audiofilter.cpp  audiofilters - Copy.cpp  audiofilters.cpp  audioresampling.cpp  averageframesfilter.cpp  boxblurfilter.cpp  cachefilter.cpp  cachefilter.h  coreplugins.cpp  cpufeatures.c  cpufeatures.cpp  cpufeatures.h  exprfilter.cpp  exprfilter.h  filtershared.h  filtersharedcpp.h  float16_helper.h  genericfilters.cpp  genericfilters.h  internalfilters.cpp  internalfilters.h  intrusive_ptr.h  jitasm.h  lutfilters.c  lutfilters.cpp  lutfilters.h  memoryuse.cpp  memoryuse.h  mergefilters.c  mergefilters.cpp  mergefilters.h  settings.cpp  (+29 more)
subprojects/: libp2p.wrap  zimg.wrap
subprojects/packagefiles/libp2p/: meson.build
subprojects/packagefiles/zimg/: meson.build
test/: async_test.py  chromaloc_mask_test.py  environment_test.py  expr_test.py  filter_test.py  log_test.py  lut_test.py  prop_dict_test.py  range_property_compat.py  test.py  weakref_test.py  zimgtest.py
waftools/: dependencies.py
(+272 files in other folders)
